Fix shipbuilder boards getting cut off

--- a/ship-builder/ship-builder.css
+++ b/ship-builder/ship-builder.css
@@ -1,6 +1,7 @@
 svg {
     width: 100%;
     height: auto;
+    overflow: visible;
 }
 
 svg .socket.module, svg .socket.compartment, svg .socket.mount {
